# grp07-algdatII

./: .travis.yml  BoyerMoore.cpp  BoyerMoore.h  BoyerMooreHorspool.cpp  BoyerMooreHorspool.h  CMakeLists.txt  DynamicTextSearch.mak  DynamischeSucheInTexten.pptx  DynamischeSucheInTextenFinal.pptx  KnuthMorrisPratt.cpp  KnuthMorrisPratt.h  Makefile  Naive.cpp  Naive.h  PerformanceChecker.cpp  PerformanceChecker.h  README.md  TextSearch.cpp  TextSearch.h  UnitTests.cpp  index.html  main.cpp  naive.cpp  naive.h  params.json  test.txt  tests.cpp
buildcmake/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  output.html
buildcmake/Testing/Temporary/: CTestCostData.txt
buildcmake/gtest/src/gtest-build/: CMakeCache.txt  Makefile  cmake_install.cmake
buildcmake/gtest/src/gtest-stamp/: download-gtest.cmake  extract-gtest.cmake  verify-gtest.cmake
buildcmake/gtest/tmp/: gtest-cfgcmd.txt
html/: _boyer_moore_8h_source.html  _boyer_moore_horspool_8h_source.html  _knuth_morris_pratt_8h_source.html  _naive_8h_source.html  _performance_checker_8h_source.html  _text_search_8h_source.html  annotated.html  class_boyer_moore-members.html  class_boyer_moore.html  class_boyer_moore_horspool-members.html  class_boyer_moore_horspool.html  class_knuth_morris_pratt-members.html  class_knuth_morris_pratt.html  class_naive-members.html  class_naive.html  class_performance_checker-members.html  class_performance_checker.html  class_text_search-members.html  class_text_search.html  classes.html  files.html  functions.html  functions_func.html  index.html  md_README.html  naive_8h_source.html  pages.html
html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_7.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  searchdata.js
test/: README.md
